[tool.poetry]
name = "alpha"
version = "0.1.0"
packages = [{include = "src"},]
description = "This is project alpha"
authors = ["Ketan <ketansahils@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
